--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,9 @@
         <div class="div"></div>
         <div class="div"></div>
       </section>
-      <section class="section2"></section>
+      <section class="section2">
+        <div></div>
+      </section>
     </main>
   </body>
 </html>
