--- a/index2.html
+++ b/index2.html
@@ -8,38 +8,57 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="body">
+    <header>
+      hello
+    </header>
     <main>
-      <img src="img.jpeg" alt="" class="img" />
+      <div class="background-wrapper">
+        <img src="/src/assets/bg111.jpeg" alt="" class="background-image" />
+      </div>
+      <div class="logo-div"><img src="/src/assets/logo.svg" alt="" class="logo-img" />
+        </div>
 
-      <section class="section">
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
-        <div class="div"></div>
+      <section class="categories-section">
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
       </section>
-      <section class="section2">
-        <div></div>
+
+      <section class="categories-section2">
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+      </section>
+      <section class="categories-section3">
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/ctg.webp" alt="" class="categories-image" />
+        </div>
+        <div class="categories">
+          <img src="/src/assets/bg5.webp" alt="" class="categories-image" />
+        </div>
       </section>
     </main>
+    <footer></footer>
   </body>
 </html>
